fix a2-game vertical overflow

--- a/src/components/styles/Activities.scss
+++ b/src/components/styles/Activities.scss
@@ -96,3 +96,8 @@
   width: 100%;
   height: 100%;
 }
+
+.feedback-link {
+  color:lime;
+  text-decoration: underline;
+}
