--- a/src/components/styles/CompressionGame.scss
+++ b/src/components/styles/CompressionGame.scss
@@ -11,7 +11,7 @@
   flex-direction: column;
   justify-content: center;
   display: flex;
-  height: calc(100vh - 220px);
+  height: $min-carousel-height;
 
   @media (max-width: $mobile-width) {
     justify-content: flex-start;
@@ -67,6 +67,7 @@
 .gif img {
   width: 90%;
   border-radius: 20px;
+  height: 100%;
 
   @media (max-width: $mobile-width) {
     width: 35%;
